<resources>
    <string name="app_name">SportApp</string>
    <string name="action_settings">Settings</string>
    <string name="boxUserName" />
    <string name="logInButton">Se connecter</string>
    <string name="okCo">C\'est bon frr t\'es co la miff</string>
    <string name="inscription">S\'inscrire</string>
    <string name="Email">Email</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="register">S\'enregistrer</string>
    <string name="password">Mot de passe</string>
    <string name="passwordConfirmation">Réencodez le mot de passe</string>
    <string name="allMandatory">Tous les champs sont obligatoires</string>
    <string name="aboutMe">À propos de moi</string>
    <string name="professsion">Profession</string>
    <string name="sexe">Sexe*</string>
    <string name="naissance">Date de naissance*</string>
    <string name="sport">Sport(s)</string>
    <string name="Ok">Ok</string>
    <string name="SendResearch">Lancer la recherche</string>
    <string name="home">Home</string>
    <string name="Settings">Option</string>
    <string name="Contact">Contact</string>
    <string name="Message">Message</string>
    <string name="Home">H</string>
    <string name="Recherche">Recherche</string>
    <string name="Add">Ajouter</string>
    <string name="Remove">Supprimer</string>
    <string name="Conversation">Ecrire</string>
    <string name="Years">Ans</string>
    <string name="Send">Envoyer</string>
    <string name="Edit">Editer mon profil</string>
    <string name="SalleSport">Selection des salles de sports où vous pourriez pratiquer</string>
    <string name="Here">Ici !</string>
    <string name="SportsPraticables">Sports praticables</string>
    <string name="AddDispo">Ajouter à mes disponibilités</string>
    <string name="SportPasPratiqué">Sports non pratiqués</string>
    <string name="SportPratiqué">Sports pratiqués</string>
    <string name="YourComplexes">Vos complexes</string>
    <string name="BoxRecherche">Filtrer par complexe</string>
    <string name="Disconnection">Se déconnecter</string>
</resources>
