<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/userNameRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textAllCaps="false" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userNameRegister"
        android:layout_alignStart="@+id/userNameRegister"
        android:layout_below="@+id/userNameRegister"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/email"
        android:layout_alignRight="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/passwordConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordRegister"
        android:layout_alignStart="@+id/passwordRegister"
        android:layout_below="@+id/passwordRegister"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/passwordConfirmation"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordConfirmation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/allMandatory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/allMandatory"
        android:textStyle="normal|italic" />

    <ProgressBar
        android:id="@+id/chargementsignup"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

</RelativeLayout>