<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ImageEdit"
        android:layout_width="114dp"
        android:layout_height="114dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/ic_menu_help"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/border_image" />

    <ScrollView
        android:id="@+id/SportNonPratiquésEdit"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/AboutMeEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toEndOf="@+id/SportPratiquésEdit"></ScrollView>

    <ScrollView
        android:id="@+id/SportPratiquésEdit"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="16dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/ComplexeEdit"
        app:layout_constraintStart_toStartOf="parent"></ScrollView>

    <ScrollView
        android:id="@+id/ComplexeEdit"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="212dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageEdit"></ScrollView>

    <Button
        android:id="@+id/SendEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Ok"
        app:layout_constraintBottom_toBottomOf="@+id/ComplexeEdit"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/NaissanceEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ProfessionEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NaissanceEdit" />

    <EditText
        android:id="@+id/AboutMeEdit"
        android:layout_width="157dp"
        android:layout_height="85dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/SendEdit"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/SportPratiqué"
        app:layout_constraintBottom_toTopOf="@+id/SportPratiquésEdit"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/SportPasPratiqué"
        app:layout_constraintBottom_toTopOf="@+id/SportNonPratiquésEdit"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/YourComplexes"
        app:layout_constraintBottom_toTopOf="@+id/ComplexeEdit"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>